2006-06-02  Jürgen Reuter  <reuter@ipd.uka.de>

	* ly/gregorian-init.ly: Converted to utf-8.  Added memorable
	shortcuts for special unicode chars that are useful in chant
	notation.  Revised exisiting and added new comments.

2006-06-02  Han-Wen Nienhuys  <hanwen@lilypond.org>

	* make/mutopia-rules.make: remove duplicate recipe.

2006-06-02  Werner Lemberg  <wl@gnu.org>

	* tex/texinfo.cnf: Fix typo (\euro -> \minus).
	Add support for U+0132 (IJ) and U+0133 (ij).

2006-06-02  Han-Wen Nienhuys  <hanwen@lilypond.org>

	* buildscripts/output-distance.py (FileLink): new class. collect
	info systems from one .ly file. 
	(FileLink.link_files_for_html): further tweaks.

2006-06-02  Graham Percival  <gpermus@gmail.com>

	* tex/texinfo.tex: partial fix for @funindex.

	* Documentation/user/macros.tely: uncomment @funindex (doesn't
	break anything).

2006-06-02  Han-Wen Nienhuys  <hanwen@lilypond.org>

	* make/mutopia-vars.make (ly_examples): replace .ly.txt with .ly

	* tex/texinfo.tex (sectionheading, q.v.): call \quoteexpand for
	@example too. Backportme.

2006-06-02  Graham Percival  <gpermus@gmail.com>

	* tex/texinfo.cnf: added UTF-8 support for texinfo; patch
	from Werner Lemberg.

2006-06-02  Paco (Francisco Vila)  <fravd@ya.com>

	* Documentation/user/music-glossary.tely: additional spanish
	updates and a lyrics fix in an example.

2006-06-02  Jürgen Reuter  <reuter@ipd.uka.de>

	* scm/define-grob-properties.scm: Previous patch contained
	spurious line from another patch not yet committed.  Fixed.

	* scm/define-grob-properties.scm: Add missing doc strings for
	ancient notation.

2006-06-01  Han-Wen Nienhuys  <hanwen@lilypond.org>

	* buildscripts/output-distance.py
	(ComparisonData.write_text_result_page): separate the scores, sort
	by geo_score.

	* scm/framework-eps.scm (output-classic-framework): start at 1 for
	system signatures.

	* buildscripts/output-distance.py (me_path): use argv[0] for
	sys.path extension
	(ComparisonData.img_cell): use colored borders.